# srm-api

./: README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_scheduled_tasks.py
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py
app/core/api/: __init__.py  auth.py  locations.py  notifications.py  users.py  voice.py  weather.py
app/core/models/: __init__.py  attachment.py  audio_log.py  base.py  location.py  notification.py  organization.py  user.py
app/core/schemas/: __init__.py  auth.py  common.py  location.py  notification.py  organization.py  user.py  weather.py
app/core/services/: __init__.py  auth.py  location.py  notification.py  user.py  weather.py
app/farm/: __init__.py
app/farm/api/: __init__.py  checklists.py  crops.py  equipment.py  fields.py  harvests.py  scheduled_tasks.py  schedules.py  tasks.py  workers.py
app/farm/models/: __init__.py  crop.py  equipment.py  field.py  harvest.py  schedule.py  task.py
app/farm/schemas/: __init__.py  schedule.py  task.py
app/farm/services/: __init__.py  schedule.py  task.py
app/maintenance/: __init__.py
app/maintenance/api/: __init__.py  assets.py  inventory.py  jobs.py  pm.py  procurement.py  tools.py  vendors.py
app/maintenance/models/: __init__.py  asset.py  inventory.py  job_card.py  procurement.py  tool.py  vendor.py
app/maintenance/schemas/: __init__.py
app/maintenance/services/: __init__.py
app/reports/: __init__.py
app/reports/api/: __init__.py  reports.py
scripts/: seed_data.py
tests/: __init__.py
(+1 files in other folders)
